manifests/quotes-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: quotes
  namespace: storage-quotes
  labels:
    app: quotes
spec:
  selector:
    app: quotes
  ports:
  - port: 80
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quotes
  namespace: storage-quotes
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quotes
  template:
    metadata:
      labels:
        app: quotes
        version: v1
    spec:
      volumes:
        # Make the 'gcp-iam-sa-credentials' secret available as volume
        # 'google-cloud-key'.
        - name: google-cloud-key
          secret:
            secretName: gcp-iam-sa-credentials
      containers:
        - name: quotes
          image: bistov/quotes
          volumeMounts:
            # Mount the 'google-cloud-key' volume into the container file
            # system.
            - name: google-cloud-key
              mountPath: /var/secrets/google
          ports:
            - containerPort: 8080
